# pacmanman

./: Cargo.toml  README.md
src/: app.rs  commands.rs  config.rs  main.rs  ui.rs
