[package]
name = "pacmanman-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin = { version = "2.2.0", features = ["ratatui"] }
color-eyre = "0.6.3"
confy = "0.6.1"
crossterm = "0.27.0"
ratatui = {version="0.26.1", features=["all-widgets"]}
serde = {version="1.0.197", features=["derive"]}
tui-input = "0.8.0"
